--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "version": "0.1.0",
   "type": "module",
+  "homepage": "/SpaceX-page/",
   "scripts": {
     "dev": "vite",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d dist",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint 'src/**/*.{js,jsx,ts,tsx,json}'",
