--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-error-boundary": "^4.0.12"
   },
   "devDependencies": {
+    "gh-pages": "^6.1.1",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
