--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "version": "0.1.0",
   "type": "module",
-  "homepage": "/SpaceX-page/",
+  "homepage": "https://detkovvv.github.io/SpaceX-page/",
   "scripts": {
     "dev": "vite",
     "predeploy": "yarn build",
